[package]
name = "encoding-utils"
description = "A utils to help with encoding and decoding os strings and more."
documentation = "https://docs.rs/encoding-utils"
homepage = "https://docs.rs/encoding-utils"
repository = "https://github.com/greenhat616/encoding-utils"
version = "0.1.0"
edition = "2021"
authors = ["a632079"]
license = "MIT"


[dependencies]
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Globalization"] }
codepage = "0.1"
